[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/SongButton.gd" id="1"]

[node name="SongButton" type="PanelContainer"]
custom_minimum_size = Vector2(700, 100)
script = ExtResource("1")

[node name="HBox" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="CoverTexture" type="TextureRect" parent="HBox"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="InfoVBox" type="VBoxContainer" parent="HBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TitleLabel" type="Label" parent="HBox/InfoVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Song Title"

[node name="ArtistLabel" type="Label" parent="HBox/InfoVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
text = "Artist Name"

[node name="GenreLabel" type="Label" parent="HBox/InfoVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
theme_override_colors/font_color = Color(0.8, 0.8, 0.5, 1)
text = "Genre | â˜… 3"

[node name="StatsVBox" type="VBoxContainer" parent="HBox"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[node name="StatsLabel" type="Label" parent="HBox/StatsVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "BPM: 120 | 3:45"

[node name="Button" type="Button" parent="."]
layout_mode = 2
flat = true
